<resources>
    <string name="app_name">CameraWithTUTK</string>
    <string name="item_name">网络摄像机</string>
    <string name="item_alive">正在连接…</string>
    <string name="bottom_light_control">指示灯开关</string>
    <string name="bottom_inf_control">红外开关</string>
    <string name="bottom_info">断开连接</string>
    <string name="bottom_reconnect">重新连接</string>
    <string name="bottom_delete">删除设备</string>
    <string name="bottom_cancel">取消</string>
    <string name="camera_title">CAMERA</string>
    <string name="camera_descri">设备</string>
    <string name="camera_definition">标清</string>
    <string name="add_title">添加设备</string>
    <string name="add_save">保存</string>
    <string name="add_UID">UID</string>
    <string name="add_scan">扫描二维码</string>
    <string name="add_key">密码</string>
    <string name="add_name">名称</string>
    <string name="video_superclear">超清</string>
    <string name="video_highclear">高清</string>
    <string name="video_standardclear">标清</string>
    <string name="video_fluency">流畅</string>
</resources>
