<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/superclear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_superclear"
        android:textSize="18sp"
        android:textColor="#ff000000" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#cccccc" />
    <TextView
        android:id="@+id/highclear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_highclear"
        android:textSize="18sp"
        android:textColor="#ff000000" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#cccccc" />
    <TextView
        android:id="@+id/standardclear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_standardclear"
        android:textSize="18sp"
        android:textColor="#ff000000" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#cccccc" />
    <TextView
        android:id="@+id/fluency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_fluency"
        android:textSize="18sp"
        android:textColor="#ff000000" />

</LinearLayout>