<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_tool"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp">

            <ImageView
                android:id="@+id/add_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/add_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_title"
                android:textColor="#ff000000"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/add_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_save"
                android:textColor="#ff000000"
                android:textSize="19sp"
                android:layout_marginRight="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="10dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_uid"
        android:text="@string/add_UID"
        android:textColor="#ff000000"
        android:textSize="16sp"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_tool"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" />
    <EditText
        android:layout_width="280dp"
        android:id="@+id/add_edit"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/add_uid"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_scan"
        android:text="@string/add_scan"
        android:textColor="#ff000000"
        android:textSize="16sp"
        android:background="@drawable/add_scan_backgroud"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@id/add_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_key"
        android:text="@string/add_key"
        android:textColor="#ff000000"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@id/add_uid"
        app:layout_constraintTop_toBottomOf="@id/add_uid" />
    <EditText
        android:layout_width="280dp"
        android:id="@+id/add_editkey"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/add_key"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_name"
        android:text="@string/add_name"
        android:textColor="#ff000000"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@id/add_uid"
        app:layout_constraintTop_toBottomOf="@id/add_key" />
    <EditText
        android:layout_width="280dp"
        android:id="@+id/add_editname"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/add_name"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp" />



</androidx.constraintlayout.widget.ConstraintLayout>